<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/ll_layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_reviews_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="12dp"
                android:text="@string/reviews"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <View
                android:id="@+id/line_reviews_heading"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:visibility="gone"
                tools:visibility="visible" />


            <TextView
                android:id="@+id/tv_review_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:padding="12dp"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tv_review_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="12dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:text="@string/text" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

